--- a/src/app/pages/admin-pages/projects-pages/list-projets-help/project-completed/project-completed.component.html
+++ b/src/app/pages/admin-pages/projects-pages/list-projets-help/project-completed/project-completed.component.html
@@ -26,9 +26,9 @@
                                 <thead>
                                     <tr>
                                         <th class="fst-italic">#ID</th>
-                                        <th>TITRE DU PROJET</th>
-                                        <th>CODE REF. PROJET</th>
-                                        <th>Statut</th>
+                                        <th class="text-center">TITRE DU PROJET</th>
+                                        <th class="text-center text-wrap">CODE REF.</th>
+                                        <th class="text-center">Statut du projet</th>
                                         <th *ngIf="_visitor == false" class="text-center">Actions</th>
                                     </tr>
                                 </thead>
@@ -38,10 +38,11 @@
                                         <td class="text-wrap" style="cursor: pointer" [routerLink]="['/web.administration.help.show-project-seleted-resolved-details', projet.project_code]">
                                             {{ projet.titre_projet }}
                                         </td>
-                                        <td style="cursor: pointer" matTooltip="Cliquer pour copier le code">
-                                            <span class="" [cdkCopyToClipboard]="projet.project_code">
-                                                {{ projet.project_code }}
-                                            </span>
+                                        <td class="text-center text-wrap" style="cursor: pointer" matTooltip="Cliquer pour copier le code">
+                                            <button (click)="openSnackBar(projet.project_code)" mat-mini-fab color="default"
+                                            class="mat-elevation-z0" [cdkCopyToClipboard]="projet.project_code">
+                                                <mat-icon aria-hidden="false" fontIcon="content_copy"></mat-icon>
+                                            </button>
                                         </td>
                                         <td class="text-center">
                                             <button *ngIf="projet.status_etude == 1 && (projet.status_decisions_off == 1 && projet.status_decisions_on == 0)"
@@ -66,6 +67,19 @@
                                                     <mat-icon class="mat-18">visibility</mat-icon> Voir
                                                     contenu</button>
                                             </mat-menu>
+                                        </td>
+                                    </tr>
+                                    <tr class="" *ngIf="is_loading_data_co == true">
+                                        <td colspan="9">
+                                            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                                        </td>
+                                    </tr>
+                                    <tr class="" *ngIf="_liste_global_projet_resolved.length == 0 && is_loading_data_co == false">
+                                        <td colspan="9">
+                                            <div class="text-center">
+                                                <i class="fa fa-ban text-danger fa-2x"></i>
+                                                <p class="mt-2 text-danger">Aucun élément trouvés</p>
+                                            </div>
                                         </td>
                                     </tr>
                                 </tbody>
